--- a/rules/alb.yaml
+++ b/rules/alb.yaml
@@ -13,9 +13,19 @@ spec:
     - alert: AwsCloudwatchAlbTargetResponseTimeSlow
       annotations:
         summary: ALB target response time is greater than 10s
-        description: ALB target response time is {{$value}}s for LB {{ $labels.dimension_LoadBalancer }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
-        runbook: Should be caused by something behind the ALB reaching a limitation. It could be the application itself in its resources or scalability, or a database or similar managed AWS service reaching the limits of its capabiltiy. Check if any of these seem highly utilized. If present in the architecture the application could also be waiting for an external dependency to respond, but depending on our access that might be hard to check for. At best you might find references to slow or failed external calls in the application logs.
-      expr: round(aws_cloudwatch_ApplicationELB_TargetResponseTime_LoadBalancer) > 10
+        description: ALB target response time is {{$value}}s for LB {{ $labels.dimension_LoadBalancer
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
+        runbook: Should be caused by something behind the ALB reaching a limitation.
+          It could be the application itself in its resources or scalability, or a
+          database or similar managed AWS service reaching the limits of its capabiltiy.
+          Check if any of these seem highly utilized. If present in the architecture
+          the application could also be waiting for an external dependency to respond,
+          but depending on our access that might be hard to check for. At best you
+          might find references to slow or failed external calls in the application
+          logs.
+      expr: round(aws_cloudwatch_ApplicationELB_TargetResponseTime_LoadBalancer) >
+        10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -23,9 +33,14 @@ spec:
     - alert: AwsCloudwatchAlbErrorRate5xx
       annotations:
         summary: ALB 5xx Error ratio is greater than 20%
-        description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-troubleshooting.html
-      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{} [30m])) * 100)  > 20
+      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{}
+        [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{}
+        [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{}
+        [30m])) * 100)  > 20
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -33,9 +48,14 @@ spec:
     - alert: AwsCloudwatchAlbErrorRate4xx
       annotations:
         summary: ALB 4xx Error ratio is greater than 30%
-        description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-troubleshooting.html
-      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{} [30m])) * 100)  > 30
+      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}
+        [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}
+        [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{}
+        [30m])) * 100)  > 30
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -43,9 +63,15 @@ spec:
     - alert: AwsCloudwatchAlbTargetGroupRatioHealthyHosts
       annotations:
         summary: ALB TargetGroup ratio of healthy hosts is below 50%
-        description: ALB TargetGroup health ratio is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup health ratio is {{$value}}% for LB {{ $labels.dimension_LoadBalancer
+          }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-      expr: round(aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup / ( aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup + aws_cloudwatch_ApplicationELB_UnHealthyHostCount_LoadBalancer_TargetGroup ) * 100 ) < 50
+      expr: round(aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup
+        / ( aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup
+        + aws_cloudwatch_ApplicationELB_UnHealthyHostCount_LoadBalancer_TargetGroup
+        ) * 100 ) < 50
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -53,9 +79,13 @@ spec:
     - alert: AwsCloudwatchAlbTargetGroupZeroHealthyHosts
       annotations:
         summary: ALB TargetGroup number of healthy hosts is 0
-        description: ALB TargetGroup number of health hosts is {{$value}} for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup number of health hosts is {{$value}} for LB {{
+          $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-      expr: aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup == 0
+      expr: aws_cloudwatch_ApplicationELB_HealthyHostCount_LoadBalancer_TargetGroup
+        == 0
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -63,9 +93,13 @@ spec:
     - alert: AwsCloudwatchAlbTargetGroupResponseTimeSlow
       annotations:
         summary: ALB TargetGroup response time is greater than 10s
-        description: ALB TargetGroup response time is {{$value}}s for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup response time is {{$value}}s for LB {{ $labels.dimension_LoadBalancer
+          }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-      expr: round(aws_cloudwatch_ApplicationELB_TargetResponseTime_LoadBalancer_TargetGroup) > 10
+      expr: round(aws_cloudwatch_ApplicationELB_TargetResponseTime_LoadBalancer_TargetGroup)
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -73,9 +107,15 @@ spec:
     - alert: AwsCloudwatchAlbTargetGroupErrorRate5xx
       annotations:
         summary: ALB TargetGroup 5xx Error ratio is greater than 20%
-        description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer
+          }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{} [30m])) * 100)  > 20
+      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{}
+        [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{}
+        [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{}
+        [30m])) * 100)  > 20
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -83,9 +123,15 @@ spec:
     - alert: AwsCloudwatchAlbTargetGroupErrorRate4xx
       annotations:
         summary: ALB TargetGroup 4xx Error ratio is greater than 30%
-        description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer
+          }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{} [30m]) + sum_over_time(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{} [30m])) * 100)  > 30
+      expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{}
+        [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{}
+        [30m]) + sum_over_time(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{}
+        [30m])) * 100)  > 30
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
