--- a/rules/apigw.yaml
+++ b/rules/apigw.yaml
@@ -13,7 +13,10 @@ spec:
     - alert: AwsCloudwatchApiGatewayLatencySlow
       annotations:
         summary: API Gateway latency is greater than 10s
-        description: API Gateway latency time is {{$value}}s for api {{ $labels.dimension_ApiName }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: API Gateway latency time is {{$value}}s for api {{ $labels.dimension_ApiName
+          }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-troubleshooting.html
       expr: aws_cloudwatch_ApiGateway_Latency_ApiName_Stage / 1000 > 10
       for: 15m
@@ -23,9 +26,13 @@ spec:
     - alert: AwsCloudwatchApiGatewayErrorRate5xx
       annotations:
         summary: API Gateway 5xx error rate is greater than 20%
-        description: API Gateway 5xx error rate is {{$value}}% for api {{ $labels.dimension_ApiName }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: API Gateway 5xx error rate is {{$value}}% for api {{ $labels.dimension_ApiName
+          }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-troubleshooting.html
-      expr: round(aws_cloudwatch_ApiGateway_5XXError_ApiName_Stage / aws_cloudwatch_ApiGateway_Count_ApiName_Stage * 100) > 20
+      expr: round(aws_cloudwatch_ApiGateway_5XXError_ApiName_Stage / aws_cloudwatch_ApiGateway_Count_ApiName_Stage
+        * 100) > 20
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -33,9 +40,13 @@ spec:
     - alert: AwsCloudwatchApiGatewayErrorRate4xx
       annotations:
         summary: API Gateway 4xx error rate is greater than 20%
-        description: API Gateway 4xx error rate is {{$value}}% for api {{ $labels.dimension_ApiName }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: API Gateway 4xx error rate is {{$value}}% for api {{ $labels.dimension_ApiName
+          }} and stage {{ $labels.dimension_Stage }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-troubleshooting.html
-      expr: round(aws_cloudwatch_ApiGateway_5XXError_ApiName_Stage / aws_cloudwatch_ApiGateway_Count_ApiName_Stage * 100) > 20
+      expr: round(aws_cloudwatch_ApiGateway_5XXError_ApiName_Stage / aws_cloudwatch_ApiGateway_Count_ApiName_Stage
+        * 100) > 20
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
