--- a/rules/tgw.yaml
+++ b/rules/tgw.yaml
@@ -13,9 +13,13 @@ spec:
     - alert: AwsCloudwatchTGWDropCountBlackhole
       annotations:
         summary: TGW Drop Count Blackhole is above 10
-        description: TGW Drop Count Blackhole is {{$value}} for Transit Gateway {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Drop Count Blackhole is {{$value}} for Transit Gateway {{
+          $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_BytesDropCountBlackhole_TransitGateway > 10
+      expr: aws_cloudwatch_TransitGateway_BytesDropCountBlackhole_TransitGateway >
+        10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -23,9 +27,13 @@ spec:
     - alert: AwsCloudwatchTGWAttachmentDropCountBlackhole
       annotations:
         summary: TGWAttachment Drop Count Blackhole is above 10
-        description: TGW Attachment Drop Count Blackhole is {{$value}} for Transit Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Attachment Drop Count Blackhole is {{$value}} for Transit
+          Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment }} in customer
+          {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_BytesDropCountBlackhole_TransitGateway_TransitGatewayAttachment > 10
+      expr: aws_cloudwatch_TransitGateway_BytesDropCountBlackhole_TransitGateway_TransitGatewayAttachment
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -33,7 +41,10 @@ spec:
     - alert: AwsCloudwatchTGWDropCountNoRoute
       annotations:
         summary: TGW Drop Count No Route is above 10
-        description: TGW Drop Count No Route is {{$value}} for Transit Gateway {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Drop Count No Route is {{$value}} for Transit Gateway {{
+          $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
       expr: aws_cloudwatch_TransitGateway_BytesDropCountNoRoute_TransitGateway > 10
       for: 15m
@@ -43,9 +54,13 @@ spec:
     - alert: AwsCloudwatchTGWAttachmentDropCountNoRoute
       annotations:
         summary: TGW Drop Count NoRoute is above 10
-        description: TGW  Drop Count NoRoute is {{$value}} for Transit Gateway Attachment {{  $labels.dimension_TransitGatewayAttachment }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW  Drop Count NoRoute is {{$value}} for Transit Gateway Attachment
+          {{  $labels.dimension_TransitGatewayAttachment }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_BytesDropCountNoRoute_TransitGateway_TransitGatewayAttachment > 10
+      expr: aws_cloudwatch_TransitGateway_BytesDropCountNoRoute_TransitGateway_TransitGatewayAttachment
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -53,9 +68,13 @@ spec:
     - alert: AwsCloudwatchTGWPacketDropCountBlackhole
       annotations:
         summary: TGWAttachment Packet Drop Count Blackhole is above 10
-        description: TGW Attachment Packet Drop Count Blackhole is {{$value}} for Transit Gateway {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Attachment Packet Drop Count Blackhole is {{$value}} for
+          Transit Gateway {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_PacketDropCountBlackhole_TransitGateway_TransitGateway > 10
+      expr: aws_cloudwatch_TransitGateway_PacketDropCountBlackhole_TransitGateway_TransitGateway
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -63,9 +82,13 @@ spec:
     - alert: AwsCloudwatchTGWAttachmentPacketDropCountBlackhole
       annotations:
         summary: TGWAttachment Packet Drop Count Blackhole is above 10
-        description: TGW Attachment Packet Drop Count Blackhole is {{$value}} for Transit Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Attachment Packet Drop Count Blackhole is {{$value}} for
+          Transit Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_PacketDropCountBlackhole_TransitGateway_TransitGatewayAttachment > 10
+      expr: aws_cloudwatch_TransitGateway_PacketDropCountBlackhole_TransitGateway_TransitGatewayAttachment
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -73,9 +96,13 @@ spec:
     - alert: AwsCloudwatchTGWPacketDropCountNoRoute
       annotations:
         summary: TGW Packet Drop Count Blackhole is above 10
-        description: TGW Packet Drop Count Blackhole is {{$value}} for Transit Gateway {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Packet Drop Count Blackhole is {{$value}} for Transit Gateway
+          {{ $labels.dimension_TransitGateway }} in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_PacketDropCountNoRoute_TransitGateway > 10
+      expr: aws_cloudwatch_TransitGateway_PacketDropCountNoRoute_TransitGateway >
+        10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -83,9 +110,13 @@ spec:
     - alert: AwsCloudwatchTGWAttachmentPacketDropCountNoRoute
       annotations:
         summary: TGWAttachment Packet Drop Count No Route is above 10
-        description: TGW Attachment Packet Drop Count No Route is {{$value}} for Transit Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: TGW Attachment Packet Drop Count No Route is {{$value}} for Transit
+          Gateway Attachment {{ $labels.dimension_TransitGatewayAttachment }} in customer
+          {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/tgw/what-is-transit-gateway.html
-      expr: aws_cloudwatch_TransitGateway_PacketDropCountNoRoute_TransitGateway_TransitGatewayAttachment > 10
+      expr: aws_cloudwatch_TransitGateway_PacketDropCountNoRoute_TransitGateway_TransitGatewayAttachment
+        > 10
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
