--- a/rules/directconnect.yaml
+++ b/rules/directconnect.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -14,7 +13,9 @@ spec:
     - alert: AwsCloudwatchDirectConnectConnectionStateCritical
       annotations:
         summary: DirectConnect Connection is down
-        description: DirectConnect Connection {{ $labels.dimension_ConnectionName }} is down in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: DirectConnect Connection {{ $labels.dimension_ConnectionName
+          }} is down in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
       expr: aws_cloudwatch_DX_ConnectionState_ConnectionId < 1
       for: 15m
       labels:
