--- a/rules/lambda.yaml
+++ b/rules/lambda.yaml
@@ -13,9 +13,12 @@ spec:
     - alert: AwsCloudwatchLambdaErrorRateWarning
       annotations:
         summary: Lambda error rate is greater than 5%
-        description: Lambda error rate is {{$value}}% for function {{ $labels.dimension_FunctionName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: Lambda error rate is {{$value}}% for function {{ $labels.dimension_FunctionName
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/lambda/latest/dg/troubleshooting-invocation.html
-      expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m]) + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 5
+      expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m])
+        + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 5
       for: 30m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -23,9 +26,12 @@ spec:
     - alert: AwsCloudwatchLambdaErrorRateCritical
       annotations:
         summary: Lambda error rate is greater than 15%
-        description: Lambda error rate is {{$value}}% for function {{ $labels.dimension_FunctionName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: Lambda error rate is {{$value}}% for function {{ $labels.dimension_FunctionName
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/lambda/latest/dg/troubleshooting-invocation.html
-      expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m]) + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 15
+      expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m])
+        + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 15
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
@@ -34,7 +40,9 @@ spec:
     - alert: AwsCloudwatchLambdaThrottles
       annotations:
         summary: Lambda function was throttled
-        description: Lambda was throttled {{$value}} times for function {{ $labels.dimension_FunctionName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: Lambda was throttled {{$value}} times for function {{ $labels.dimension_FunctionName
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/lambda-troubleshoot-throttling/
       expr: aws_cloudwatch_Lambda_Throttles_FunctionName > 0
       for: 15m
@@ -45,7 +53,9 @@ spec:
     - alert: AwsCloudwatchLambdaTimeout
       annotations:
         summary: Lambda function was timed out after 900s
-        description: Lambda function timed out with {{$value}}s for function {{ $labels.dimension_FunctionName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: Lambda function timed out with {{$value}}s for function {{ $labels.dimension_FunctionName
+          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://aws.amazon.com/premiumsupport/knowledge-center/lambda-troubleshoot-invocation-timeouts/
       expr: aws_cloudwatch_Lambda_Duration_FunctionName / 1000 > 900
       for: 15m
