--- a/rules/natgw.yaml
+++ b/rules/natgw.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -14,7 +13,9 @@ spec:
     - alert: AwsCloudwatchNATGatewayPacketsDropped
       annotations:
         summary: NATGW has Dropped Packets Count higher than 10
-        description: NATGW {{ $labels.dimension_NatGatewayId }} has {{$value}} dropped Packages in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: NATGW {{ $labels.dimension_NatGatewayId }} has {{$value}} dropped
+          Packages in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html
       expr: aws_cloudwatch_NATGateway_PacketsDropCount_NatGatewayId > 10
       for: 15m
@@ -24,7 +25,10 @@ spec:
     - alert: AwsCloudwatchNATGatewayErrorPortAllocation
       annotations:
         summary: NATGW has Error Port Allocation higher than 1
-        description: NATGW {{ $labels.dimension_NatGatewayId }} has {{$value}} Errors in Port Allocation in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: NATGW {{ $labels.dimension_NatGatewayId }} has {{$value}} Errors
+          in Port Allocation in customer {{ $labels.overwrite_asy_customer }} account
+          {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html
       expr: aws_cloudwatch_NATGateway_ErrorPortAllocation_NatGatewayId > 1
       for: 15m
