--- a/rules/ses.yaml
+++ b/rules/ses.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -14,7 +13,9 @@ spec:
     - alert: AwsCloudwatchSESBounceWarning
       annotations:
         summary: SES bounce rate is greater than 5%
-        description: SES bounce rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: SES bounce rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/blogs/messaging-and-targeting/handling-bounces-and-complaints/
       expr: round(aws_cloudwatch_SES_ReputationBounceRate * 100, 0.01) > 5
       for: 30m
@@ -24,7 +25,9 @@ spec:
     - alert: AwsCloudwatchSESComplaintWarning
       annotations:
         summary: SES complain rate is greater than 0.1%
-        description: SES complain rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: SES complain rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/blogs/messaging-and-targeting/handling-bounces-and-complaints/
       expr: round(aws_cloudwatch_SES_ReputationComplaintRate * 100, 0.01) > 0.1
       for: 30m
@@ -34,7 +37,9 @@ spec:
     - alert: AwsCloudwatchSESBounceCritical
       annotations:
         summary: SES bounce rate is greater than 10%
-        description: SES bounce rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: SES bounce rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/blogs/messaging-and-targeting/handling-bounces-and-complaints/
       expr: round(aws_cloudwatch_SES_ReputationBounceRate * 100, 0.01) > 10
       for: 30m
@@ -46,7 +51,9 @@ spec:
     - alert: AwsCloudwatchSESComplaintCritical
       annotations:
         summary: SES complain rate is greater than 0.5%
-        description: SES complain rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: SES complain rate is {{$value}}% in customer {{ $labels.overwrite_asy_customer
+          }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region
+          }}
         runbook_url: https://aws.amazon.com/blogs/messaging-and-targeting/handling-bounces-and-complaints/
       expr: round(aws_cloudwatch_SES_ReputationComplaintRate * 100, 0.01) > 0.5
       for: 30m
