--- a/rules/sns.yaml
+++ b/rules/sns.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -14,7 +13,9 @@ spec:
     - alert: AwsCloudwatchSNSFailures
       annotations:
         summary: SNS delivery failures
-        description: SNS topic {{ $labels.dimension_TopicName }} has {{$value}} delivery failures in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        description: SNS topic {{ $labels.dimension_TopicName }} has {{$value}} delivery
+          failures in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
+          }} region {{ $labels.overwrite_aws_region }}
       expr: aws_cloudwatch_SNS_NumberOfNotificationsFailed_TopicName > 0
       for: 30m
       labels:
